[package]
name = "umms"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
futures = "0.3.15"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]
