[package]
name = "umms"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
indicatif = "0.16"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.async-std]
version = "1.9.0"
features = ["std", "attributes"]